tests/ui/async-await/issues/issue-102206.stderr
error[E0308]: mismatched types
  --> $DIR/issue-102206.rs:6:27
   |
LL |     std::mem::size_of_val(foo());
   |     --------------------- ^^^^^
   |     |                     |
   |     |                     expected `&_`, found future
   |     |                     help: consider borrowing here: `&foo()`
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
